[package]
name = "l1ght"
version = "1.0.0"
edition = "2021"
authors = ["fence <fence@desu-mail.moe>"]
license = "GPL-3.0"
description = "A small cli for changing the backlight on a laptop"
readme= "README.md"

[package.metadata.deb]
maintainer = "fence <fence@desu-mail.moe>"
changelog = "packaging/debian/changelog"
extended-description = "It does not rely on X."

[dependencies]
pico-args = "0.5.0"
